--- a/web/index.html
+++ b/web/index.html
@@ -12,10 +12,12 @@
 				<section id="banner" style="background-color:#87CEFA">
 					<div class="inner">
 						<header>
-							<h1>DIGITAL CLASSROOM</h1>
+                            <a href="login.html"><button onclick="myFunction()" class="a1">Login</button></a>
+                            <a href="register.html"><button onclick="myFunction()" class="a1">Register</button></a>
+                            <h1>DIGITAL CLASSROOM</h1>
                             <p>A classroom for every query. <br /></p>
+                            <a href="#main" class="more">Learn More</a>
                         </header>
-						<a href="#main" class="more">Learn More</a>
 					</div>
 				</section>
 
@@ -30,7 +32,7 @@
 								<a href="https://youtu.be/s6zR2T9vn2c" class="image fit"><img src="images/banner.png" alt="" /></a>
 								<div class="inner">
 									<h3>Images</h3>
-									<a href="https://youtu.be/s6zR2T9vn2c" class="button fit" data-poptrox="youtube,800x400">Watch</a>
+									<a href="https://youtu.be/s6zR2T9vn2c" class="button fit" data-poptrox="youtube,800x400">Open</a>
 								</div>
 							</div>
 
@@ -38,7 +40,7 @@
 								<a href="https://youtu.be/s6zR2T9vn2c" class="image fit"><img src="images/video.jpg" style="height:213px;width:350px; " alt="" /></a>
 								<div class="inner">
 									<h3>Videos</h3>
-									<a href="https://youtu.be/s6zR2T9vn2c" class="button style2 fit" data-poptrox="youtube,800x400">Watch</a>
+									<a href="https://youtu.be/s6zR2T9vn2c" class="button style2 fit" data-poptrox="youtube,800x400">Open</a>
 								</div>
 							</div>
 
@@ -46,7 +48,7 @@
 								<a href="https://youtu.be/s6zR2T9vn2c" class="image fit"><img src="images/ppt.jpg" style="height:213px;" alt="" /></a>
 								<div class="inner">
 									<h3>PPTs</h3>
-									<a href="https://youtu.be/s6zR2T9vn2c" class="button style3 fit" data-poptrox="youtube,800x400">Watch</a>
+									<a href="https://youtu.be/s6zR2T9vn2c" class="button style3 fit" data-poptrox="youtube,800x400">Open</a>
 								</div>
 							</div>
 
@@ -54,7 +56,7 @@
 								<a href="https://youtu.be/s6zR2T9vn2c" class="image fit"><img src="images/pdf1.png" style="height:213px;" alt="" /></a>
 								<div class="inner">
 									<h3>PDFs</h3>
-									<a href="https://youtu.be/s6zR2T9vn2c" class="button style2 fit" data-poptrox="youtube,800x400">Watch</a>
+									<a href="https://youtu.be/s6zR2T9vn2c" class="button style2 fit" data-poptrox="youtube,800x400">Open</a>
 								</div>
 							</div>
 
