--- a/web/index.html
+++ b/web/index.html
@@ -11,9 +11,9 @@
 
 				<section id="banner" style="background-color:#87CEFA">
 					<div class="inner">
-						<header>
-                            <a href="login.html"><button onclick="myFunction()" class="a1">Login</button></a>
-                            <a href="register.html"><button onclick="myFunction()" class="a1">Register</button></a>
+                        <a href="login.html"><button onclick="myFunction()" class="a1" style ="text-align: left;">Login</button></a>
+                        <a href="register.html"><button onclick="myFunction()" class="a1">Register</button></a>
+                        <header>
                             <h1>DIGITAL CLASSROOM</h1>
                             <p>A classroom for every query. <br /></p>
                             <a href="#main" class="more">Learn More</a>
