--- a/web/register.html
+++ b/web/register.html
@@ -110,7 +110,7 @@ body {
       <form class="login-form">
         <div class="row">
           <div class="input-field col s12 center">
-            <!-- <img src="http://w3lessons.info/logo.png" alt="" class="responsive-img valign profile-image-login"> -->
+
             <p class="center login-form-text">Digital Classroom SignUp Form</p>
           </div>
         </div>
@@ -120,7 +120,7 @@ body {
           </label>
 
           <label class="container">Teacher
-              <input type="radio" name="testing" value="first" onClick="MM_goToURL('parent','/Digital-Classroom-master/Digital-Classroom/web/register1.html');return document.MM_returnValue">
+              <input type="radio" name="testing" value="first" onClick="MM_goToURL('parent','register1.html');return document.MM_returnValue">
               <span class="checkmark"></span></label>
           </label>
         <div class="row margin">
