--- a/web/register1.html
+++ b/web/register1.html
@@ -114,7 +114,7 @@
                 </div>
             </div>
             <label class="container">Student
-                <input type="radio" name="testing" value="first" onClick="MM_goToURL('parent','/Digital-Classroom-master/Digital-Classroom/web/register.html');return document.MM_returnValue">
+                <input type="radio" name="testing" value="first" onClick="MM_goToURL('parent','register.html');return document.MM_returnValue">
                 <span class="checkmark"></span>
             </label>
 
